# Kinect_depth

./: CMakeLists.txt  README.md  colordepth.cpp  generatePointCloud.cpp  kinectOpencv.cpp
